QtScript: regression with instanceof operator for QMetaObject wrappers

Tell JavaScriptCore that QMetaObject wrappers can be used as the
second operand to instanceof; this is done by setting the
ImplementsHasInstance flag.
We don't actually have to implement hasInstance() because the
default implementation does the right thing.

Task-number: QTBUG-8366
Reviewed-by: Olivier Goffart